[package]
name = "k210-flash-rs"
version = "0.1.0"
authors = ["Peter De Schrijver <p2@psychaos.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-serial = "4.3.3"
tokio = { version = "0.2.20", features = [ "macros", "time", "sync", "fs", "blocking", "io-std", "rt-threaded" ], default-features = false }
tokio-util = { version = "0.3.1", features = [ "codec" ], default-features = false }
futures = "0.3.4"
bytes = "0.5.4"
byteorder = "1.3.4"
crc-any = "2.3.0"
indicatif = "0.14.0"
clap = "2.33.0"
elf_rs = "0.1.2"
nix = "0.17.0"
sha2 = "0.8.1"
pipefile = "0.1"
libc = "0.2"
mio = {version = "0.7", features = [ "os-util", "os-poll"] }
console = "0.11.3"
log = { version = "0.4.8", features = [ "std" ] }

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'
